--- a/text_analysis.Rmd
+++ b/text_analysis.Rmd
@@ -10,6 +10,9 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+# # Uncomment and run these lines to install packages if not already installed:
+# install.packages("tidyverse")
+
 #load tidyverse
 library("tidyverse")
 ```
